# FITing-Tree

./: .gitignore  CMakeLists.txt  README.md  bptree.h  config.h  datagen.py  db_impl.cpp  db_impl.h  exp.sh  main.cc  main2.cc  main_goodput.cc  main_latency.cc  main_workload.cc  process_SOSD_data.cc  results.new.txt  results.txt  shrinkingcone_segmentation.cpp  shrinkingcone_segmentation.h
ATree/: bptree.h  db_impl.h
dataset/: linear.csv  normal.csv  osmc_200M_uint64.csv  seg1.csv  seg10.csv
demo_dataset/: books_200M_uint64.csv  fb_200M_uint64.csv  normal.csv  seg1.csv  seg10.csv  wiki_ts_200M_uint64.csv
scripts/: exp.sh
test/: test_latency.cc  test_throughput.cc  test_workload.cc
util/: datagen.py
